backstage/rolling-update/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backstage
  namespace: backstage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backstage
  template:
    metadata:
      labels:
        app: backstage
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: backstage
          image: docker.openmsa.monster/backstage
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 7007
