backstage/rolling-update/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backstage
  namespace: backstage
spec:
  ingressClassName: nginx
  rules:
  - host: backstage.openmsa.monster
    http:
      paths:
      - backend:
          service:
            name: backstage
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - backstage.openmsa.monster
    secretName: backstage-certs
